# identity

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  askama.toml  compose.yaml  config.json  config.json.example  fly.toml  identity.sln
.github/workflows/: docker-publish.yml
examples/dotnet/: .gitignore  Program.cs  appsettings.json
examples/dotnet/Properties/: launchSettings.json
src/: admin.rs  app.rs  auth.rs  http.rs  issuer.rs  main.rs  proxy.rs  store.rs  uri.rs  utils.rs
src/admin/: mod.rs
src/admin/templates/: add-user.html  base.html
src/keystore/: mod.rs  ring.rs
src/migrations/: 1_init.up.sql  V1__init.sql  V2__user_claim_unique.sql
src/sql/: add_user_claim.sql  change_password.sql  create_user.sql  create_user_session.sql  delete_user_claim_by_name.sql  find_user_by_id.sql  find_user_by_session.sql  find_user_by_username.sql  get_all_users.sql  get_user_claims.sql  update_user_role.sql
src/templates/: add-user.html  claims.html  home.html  password.html  unauthorized.html  users.html
src/ui/: login.html
