[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json"] }

rand = { version = "0.8" }

base64 = { version = "0.21" }
uuid = { version = "1", features = ["v4", "serde"] }

async-trait = "0.1"
futures = "0.3"
anyhow = "1"

argon2 = "0.5"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", features = ["serde"] }

url = "2.4.0"

log = "0.4"
env_logger = "0.10"