[package]
name = "identity"
version = "0.1.8"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.6" }
axum-macros = "0.3.8"
cookie = { version = "0.18", features = ["percent-encoding", "percent-encode"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log"] }
askama = "0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

jsonwebtoken = "9.2"
openssl = { version = "0.10" }

once_cell = "1.18"

hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"

rand = { version = "0.8" }

base64 = { version = "0.21" }
uuid = { version = "1", features = ["v4", "serde"] }

async-trait = "0.1"
futures = "0.3"
anyhow = "1"

argon2 = "0.5"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4.34", features = ["serde"] }

url = { version = "2.4", features = ["serde"] }

log = "0.4"
env_logger = "0.11"

clap = { version = "4.5", features = ["derive"] }